--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "flowbite": "^1.4.1",
+    "laravel-vue-pagination": "^3.0.0",
     "lodash": "^4.17.21",
     "perfect-scrollbar": "^1.5.5",
     "postcss": "^8",
